k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopease-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopease-api
  template:
    metadata:
      labels:
        app: shopease-api
    spec:
      containers:
        - name: shopease-api
          image: shopeasecapstoneacr.azurecr.io/shopease-api:v1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shopease-api
spec:
  type: LoadBalancer
  selector:
    app: shopease-api
  ports:
    - port: 8080
      targetPort: 8080
