k8s/client-deployment-shopease.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopease-client
  namespace: shopease
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopease-client
  template:
    metadata:
      labels:
        app: shopease-client
    spec:
      containers:
        - name: client
          image: shopeasecapstoneacr.azurecr.io/shopease-client:v2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: shopease-client
  namespace: shopease
spec:
  type: ClusterIP
  selector:
    app: shopease-client
  ports:
    - port: 80
      targetPort: 80
