k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopease-ingress
  namespace: shopease
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: shopease-api
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopease-client
                port:
                  number: 80
